fecthing data to get cat's info

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <!-- Our Scripts -->
-    <script defer type="text/javascript" src="Carousel.js"></script>
-    <script defer type="text/javascript" src="index.js"></script>
+    <script defer type="module" src="Carousel.js"></script>
+    <script defer type="module" src="index.js"></script>
   </head>
 
   <body>
