SBA First Commit

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Our Scripts -->
     <script defer type="module" src="Carousel.js"></script>
-    <script defer type="module" src="index.js"></script>
+    <script defer type="module" src="testing.js"></script>
   </head>
 
   <body>
