creating the template for the images

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       style="max-width: 1600px;"
     ></div>
 
-    <!-- Carousel Item Template -->
+    <!-- ========================= Carousel Item Template =============== -->
     <template id="carouselItemTemplate">
       <div class="carousel-item">
         <div class="card">
